# air-force-one

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
afo-hid/: Cargo.toml
afo-hid/src/: main.rs
afo-shared/: Cargo.toml
afo-shared/src/: lib.rs
ble-receiver-desktop/: Cargo.toml
ble-receiver-desktop/src/: main.rs
bridge-fw/: Cargo.toml  memory.x
bridge-fw/src/: main.rs
case/: case_bottom.stl  case_top.stl
config/homeassistant/: home-assistant.log.1  home-assistant_v2.db
config/homeassistant/.storage/: auth  core.config_entries  core.uuid  http  http.auth  repairs.issue_registry
docker/: docker-compose.yml  telegraf.conf
docker/volumes/data/telegraf/: telegraf.conf
firmware/: Cargo.toml  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: app.rs  board.rs  lib.rs  scd30.rs  sgp40.rs  sps30.rs  vocalg.rs
firmware/src/actors/: bluetooth.rs  button.rs  emittor.rs  flash.rs  led.rs  mod.rs  reactor.rs  scd4x.rs  transformer.rs  usb_serial.rs
firmware/src/drivers/: mod.rs  neopixel.rs  scd30.rs  sensirion_i2c.rs  sgp40.rs  sps30.rs  vocalg.rs
firmware/src/tasks/: bluetooth.rs  buttons.rs  display.rs  mod.rs  reporting.rs  sensors.rs  usb.rs
firmware2/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
firmware2/src/: lib.rs  models.rs
firmware2/src/actors/: bluetooth.rs  button.rs  buzzer.rs  display.rs  emittor.rs  flash.rs  light_sound.rs  mod.rs  neopixel.rs  reactor.rs  scd30.rs  scd4x.rs  sgp40.rs  sps30.rs  usb_hid.rs  usb_serial.rs
firmware2/src/drivers/: mod.rs  neopixel.rs
node-c3/: Cargo.toml
node-c3/.cargo/: config.toml
node-c3/src/: main.rs
node-fw/: Cargo.toml  README.md  memory.x
node-fw/.cargo/: config.toml
node-fw/src/: main.rs
pcb/: AFO-lite.kicad_pcb  AFO-lite.kicad_prl  AFO-lite.kicad_pro  AFO-lite.kicad_sch
sensirion-async/: Cargo.toml  rust-toolchain.toml
sensirion-async/examples/embassy-nrf/: Cargo.toml  memory.x  rust-toolchain.toml
sensirion-async/examples/embassy-nrf/.cargo/: config.toml
sensirion-async/examples/embassy-nrf/src/: lib.rs
sensirion-async/src/: lib.rs  scd30.rs  scd4x.rs  sgp40.rs  sht4x.rs  sps30.rs  vocalg.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  scd30.rs  sps30.rs
telegraf-bridge/: Cargo.toml
telegraf-bridge/src/: main.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
