[package]
name = "air-force-one-bridge"
version = "0.1.0"
edition = "2021"

[features]
dev = [ "panic-probe" ]

[dependencies]
embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-sync = { version = "0.5.0" }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "gpiote", "time-driver-rtc1", "nrf52840", "time", "unstable-pac" ]}
nrf-softdevice = { version = "0.1.0", features = ["defmt", "ble-peripheral", "ble-central", "critical-section-impl", "nrf52840", "s140"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features= ["print-defmt"], optional = true }

heapless = "0.8.0"
static_cell = {version = "2.0.0", features = ["nightly"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

shared = { path = "../shared", features = ["defmt"] }

serde = { version = "1", default-features = false }
postcard = "0.7.2"
rust-mqtt = { version = "0.2.0", default-features = false, features = ["no_std"] }
rand_core = "0.6.4"

