[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
name = "air-force-one"
edition = "2021"
version = "0.1.0"

[patch.crates-io]
embassy = { git = "https://github.com/matoushybl/embassy.git", branch = "feat/usb"}
embassy-nrf = { git = "https://github.com/matoushybl/embassy.git", branch = "feat/usb" }
embassy-net = { git = "https://github.com/matoushybl/embassy.git", branch = "feat/usb" }
embassy-hal-common = { git = "https://github.com/matoushybl/embassy.git", branch = "feat/usb" }
embassy-traits = { git = "https://github.com/matoushybl/embassy.git", branch = "feat/usb" }
embassy-macros = { git = "https://github.com/matoushybl/embassy.git", branch = "feat/usb" }

[dependencies]
embassy = { version = "0.1.0", features = ["defmt"] }
embassy-traits = { version = "0.1.0", features = ["defmt"] }
embassy-hal-common = {version = "0.1.0" }
embassy-net = { version = "0.1.0", default-features = false, features = ["defmt", "tcp", "medium-ethernet", "pool-16"] }
embassy-macros = { version = "0.1.0" }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac"] }

defmt = "0.3.0"
defmt-rtt = "0.3.0"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
arrayvec = { version = "0.5.2", default-features = false }
futures-intrusive = { version = "^0.4", default-features = false }
usb-device = "0.2.8"
nrf-usbd = "0.1.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
postcard = "0.7.2"
shared = { path = "../shared", features = ["defmt_format"] }
# nrf-smartled = { version = "0.4.0", features = ["52840"]}

fixed = "1"
fixed-sqrt = "0.2"

crc_all = "0.2.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false
