[package]
name = "afo-fw"
version = "0.1.0"
edition = "2021"

[features]
default = ["panic-probe"]

[dependencies]
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-persist = { version = "0.3.0", features = ["utf8", "custom-panic-handler"], optional = true }

drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time"] }
adafruit-feather-nrf52 = { version = "0.1.0" }
ector = { version = "0.1.0", default-features = false }

embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.1.0", features = ["defmt", "nightly"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.1.0", features = ["nightly", "defmt"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-pac", "nightly"]}

nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "critical-section-impl", "ble-gatt-server", "ble-gatt-client"] }
nrf-softdevice-s140 = { version = "0.1.1" }

sensirion-async = { git = "https://github.com/matoushybl/sensirion-async.git", rev = "7c3a0873a7ec0154cf000bcff56d20ea3806410c", features = ["defmt"] }
afo-shared = { path = "../afo-shared", features = ["defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "=1.0.0-alpha.9"}
embedded-hal-async = { version = "=0.2.0-alpha.0" }
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }
static_cell = "1.0.0"

ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
arrayvec = { version = "0.5.2", default-features = false }

usbd-hid = "0.5.2"
usbd-hid-macros = "0.5.2"

serde = { version = "1", default-features = false }
postcard = "0.7.2"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0 
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f" }

ector = { git = "https://github.com/drogue-iot/ector.git", rev = "411462aa4a03e61a10e5d00ca9e93166d8370eee" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "bf621f62ffd33614b8c3cef65b3a5b9fb7868821" }
adafruit-feather-nrf52 = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "bf621f62ffd33614b8c3cef65b3a5b9fb7868821" }

