[package]
name = "afo-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["panic-probe"]

[dependencies]
defmt = { version = "0.3" }
defmt-rtt = { version = "0.3.2" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-persist = { version = "0.3.0", features = ["utf8", "custom-panic-handler"], optional = true }

drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time", "bsp+adafruit_feather_nrf52840"] }

ector = { version = "0.1.0", default-features = false }
embassy = { version = "0.1.0", default-features = false, features = ["defmt", "defmt-timestamp-uptime", "time", "unstable-traits"] }
embassy-embedded-hal = { version = "0.1.0", features = ["nightly", "defmt"] }
embassy-usb-serial = { version = "0.1.0", features = ["defmt"] }
embassy-usb-hid = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-pac"]}

nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl", "ble-gatt-server", "ble-gatt-client"] }
nrf-softdevice-s140 = { version = "0.1.1" }

sensirion-async = { path = "../sensirion-async", features = ["defmt"] }

cortex-m        = { version = "0.7.2" }
cortex-m-rt = "0.7"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }

ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
arrayvec = { version = "0.5.2", default-features = false }

usbd-hid = "0.5.2"
usbd-hid-macros = "0.5.2"

serde = { version = "1", default-features = false }
postcard = "0.7.2"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0 
overflow-checks = false

[patch.crates-io]
embassy = { git = "https://github.com/matoushybl/embassy.git", rev = "e4cfbf96ac81fe17052c3d91f32a92be2b507368" }
embassy-embedded-hal = { git = "https://github.com/matoushybl/embassy.git", rev = "e4cfbf96ac81fe17052c3d91f32a92be2b507368" }
embassy-usb-serial = { git = "https://github.com/matoushybl/embassy.git", rev = "e4cfbf96ac81fe17052c3d91f32a92be2b507368" }
embassy-usb-hid = { git = "https://github.com/matoushybl/embassy.git", rev = "e4cfbf96ac81fe17052c3d91f32a92be2b507368" }
embassy-hal-common = { git = "https://github.com/matoushybl/embassy.git", rev = "e4cfbf96ac81fe17052c3d91f32a92be2b507368" }
embassy-nrf = { git = "https://github.com/matoushybl/embassy.git", rev = "e4cfbf96ac81fe17052c3d91f32a92be2b507368" }
ector = { git = "https://github.com/drogue-iot/ector.git", rev = "63c08489da17ff92c493f21411411ce5ddd6154a" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "4fbcc292a3d555178f34c87a3d15705516f3d059" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }
