[package]
name = "air-force-one-node-c3"
version = "0.1.0"
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0", features = ["async", "embassy", "embassy-executor-thread", "embassy-time-timg0"] }
esp-backtrace = { version = "0.11.0", git = "https://github.com/esp-rs/esp-backtrace.git", features = ["esp32c3", "exception-handler", "defmt"], default-features = false }
esp-println = { version = "0.9.0", git = "https://github.com/esp-rs/esp-println.git", features = ["esp32c3", "defmt-espflash", "critical-section"]}
esp-wifi = { version = "0.3.0", features = ["esp32c3", "embassy-net", "wifi", "smoltcp", "ipv4", "defmt"], default-features = false, git = "https://github.com/esp-rs/esp-wifi.git"}

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-sync = "0.5.0"
embassy-time = { version = "0.3.0", features = ["defmt-timestamp-uptime"] }
embassy-net = { version = "0.4.0", features = ["proto-ipv4", "medium-ethernet", "dhcpv4", "tcp", "defmt"] }

portable-atomic = { version = "1.6", features = ["unsafe-assume-single-core"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
embedded-io-async = "0.6.1"
embedded-svc = { version = "0.26.4", default-features = false }

sensirion-async = { git = "https://github.com/matoushybl/sensirion-async.git", rev = "54e00fee3d679864ee726a081d75eda205bf3430", features = ["defmt"]}
rust-mqtt = { version = "0.2.0", default-features = false }
heapless = "0.8.0"
defmt = "0.3"
