[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
defmt_format = []

[dependencies]
postcard = "0.7.2"
defmt = "0.3.0"
serde = { version = "1.0.*", default-features = false }