[package]
name = "afo-telegraf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegraf = "*"
serial2 = "0.1.6"
postcard = "0.7.2"
shared = { path = "../shared", features = ["std"] }
tokio = { version = "1.10.0", features = ["full"] }
tokio-serial = { version = "5.4", features = ["rt"]}
clap = {version = "3.0", features = ["derive"]}